add security to gateway