@@ -1,6 +1,8 @@
-package ru.kraser.technical_helper.main_server.security;
+package ru.kraser.technical_helper.gateway.security;
 
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -12,9 +14,9 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import ru.kraser.technical_helper.common_module.enums.Role;
 
+import java.util.Collections;
 import java.util.List;
 
 import static ru.kraser.technical_helper.common_module.util.Constant.*;
@@ -28,15 +30,19 @@ public class SecurityWebConfiguration {
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final AuthenticationProvider authenticationProvider;
 
+    @Value("${allowed.frontend.url}")
+    private String allowedFrontendUrl;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                //.cors(c -> c.configurationSource(corsConfigurationSource()))
+                .cors(c -> c.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests((request) -> request
                         .requestMatchers(BASE_URL + AUTH_URL)
                         .permitAll()
-
+                        .requestMatchers(BASE_URL + DEFAULT_URL)
+                        .permitAll()
                         .requestMatchers(BASE_URL + ADMIN_URL + "/**").hasAnyAuthority(
                                 Role.ADMIN.name())
 
@@ -76,12 +82,16 @@ public class SecurityWebConfiguration {
         return source;
     }*/
 
-    /*private CorsConfigurationSource corsConfigurationSource() {
+    private CorsConfigurationSource corsConfigurationSource() {
         return new CorsConfigurationSource() {
             @Override
             public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                 CorsConfiguration cfg = new CorsConfiguration();
-                cfg.setAllowedOrigins(Collections.singletonList("http://localhost:123"));
+                //cfg.setAllowCredentials(true);
+                //cfg.setAllowedOrigins(List.of("http://localhost:12345"));
+                //cfg.setAllowedOrigins(List.of("http://192.168.0.101:12345"));
+                cfg.setAllowedOrigins(List.of(allowedFrontendUrl));
+                //cfg.setAllowedOrigins(Collections.singletonList("*"));
                 cfg.setAllowedMethods(Collections.singletonList("*"));
                 cfg.setAllowedHeaders(Collections.singletonList("*"));
                 cfg.setExposedHeaders(Collections.singletonList("*"));
@@ -89,5 +99,5 @@ public class SecurityWebConfiguration {
                 return cfg;
             }
         };
-    }*/
+    }
 }
